--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ flutter:
       android:
         package: com.example.niimbot_label_printer
         pluginClass: NiimbotLabelPrinterPlugin
+        ios:
+          pluginClass: NiimbotLabelPrinterPlugin
+
       #ios:
         #pluginClass: NiimbotLabelPrinterPlugin
       #linux:
